--- a/css/media.css
+++ b/css/media.css
@@ -19,6 +19,11 @@
         padding-bottom: 15px;
     }
 
+    .catalog_first_block img[src='images/banner_super_sale.png'] {
+        width: 0;
+        height: 0;
+    }
+
     .catalog_second_block_head {
         flex-direction: column;
     }
@@ -29,11 +34,6 @@
 
     .catalog_second_block_head p {
         margin-top: 10px;
-    }
-
-    .catalog_second_block_links {
-        margin-left: 0;
-        margin-right: 200px;
     }
 
     .summer_collection .container {
@@ -55,6 +55,9 @@
         gap: 10px;
     }
 
+    .pre_footer_phone:before {
+        width: 22px;
+    }
 }
 
 @media only screen and (max-width: 821px) {
@@ -65,6 +68,10 @@
     .contacts_part_pre_footer .container {
         gap: 5px;
     }
+
+    .cards_of_items article {
+        width: 257px;
+    }
 }
 
 @media only screen and (max-width: 801px) {
@@ -72,10 +79,22 @@
         padding: 0 15px;
     }
 
+    .catalog .container {
+        gap: 20px;
+    }
+
+    .first_section .container {
+        padding-top: 20px;
+    }
+
+    .main_picture {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
     .first_section .container > div:last-of-type {
-        opacity: 0;
-        width: 0;
-        height: 0;
+
     }
 
     .first_section .container {
@@ -115,7 +134,49 @@
 }
 
 @media only screen and (max-width: 769px) {
-    .catalog .container{
+    .catalog .container {
         gap: 25px;
     }
+
+    .catalog_first_block {
+        width: 40px;
+        height: 40px;
+        margin-right: 80px;
+        position: relative;
+    }
+
+    .menu_bar {
+        opacity: 1;
+        position: relative;
+    }
+
+    .menu_bar:hover + div {
+        position: absolute;
+        z-index: 10;
+        width: auto;
+        height: auto;
+        opacity: 1;
+        margin-top: 30px;
+    }
+
+    .menu_bar img {
+        width: 30px;
+        height: 30px;
+    }
+
+    .catalog_first_block > div {
+        height: 0;
+        width: 0;
+        opacity: 0;
+        overflow: hidden;
+        transition: 0.3s;
+    }
+
+    .catalog_second_block_head {
+        margin-top: 8px;
+        flex-direction: row;
+    }
+}
+
+@media only screen and (max-width: 431px) {
 }
