--- a/css/style.css
+++ b/css/style.css
@@ -463,6 +463,13 @@ main {
     height: 1244px;
 }
 
+.menu_bar {
+    width: 0;
+    height: 0;
+    opacity: 0;
+    position: absolute;
+}
+
 .catalog_first_block div:first-of-type {
     background: #fbfbfb;
     height: 774px;
