--- a/css/mob_menu.css
+++ b/css/mob_menu.css
@@ -6,12 +6,8 @@ body{
     transition: all 300ms linear;
 }
 
-
-/* #Navigation
-================================================== */
-
 .cd-header{
-    position: fixed;
+    position: static;
     width:100%;
     top:0;
     left:0;
@@ -54,6 +50,7 @@ body{
     padding-top: 15px;
     margin-top: 26px;
     transition : all 0.3s ease-out;
+    z-index: 9999;
 }
 .menu-icon {
     height: 30px;
@@ -67,7 +64,7 @@ body{
     height: 2px;
     width: 30px;
     display: block;
-    background-color: #fff;
+    background-color: black;
     margin-bottom: 7px;
     cursor: pointer;
     -webkit-transition: background-color .5s ease, -webkit-transform .2s ease;
@@ -100,6 +97,8 @@ body{
 .nav:before, .nav:after {
     content: "";
     position: fixed;
+    left: 0;
+    top: 0;
     width: 100vw;
     height: 100vh;
     background: rgba(20, 21, 26,0.6);
